force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__Asset_BillToAccountId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Asset_BillToAccountId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset_BillToAccountId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Asset_BillToAccountId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>Asset_BillToAccountId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>