force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__AssetQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetQuantity__c</fullName>
    <label>Asset Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>