force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__AssetStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetStatus__c</fullName>
    <label>Asset Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>