force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__AvailablePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvailablePercent__c</fullName>
    <label>Available Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvailablePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>