force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__AverageUptimePerDayMinutesQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageUptimePerDayMinutesQuantity__c</fullName>
    <label>Average Uptime Per Day Minutes Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageUptimePerDayMinutesQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>