force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__CurrentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentAmount__c</fullName>
    <label>Current Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>