force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__CurrentMRRAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentMRRAmount__c</fullName>
    <label>Current Monthly Recurring Revenue Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentMRRAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>