force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__DigitalAssetStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalAssetStatus__c</fullName>
    <label>Digital Asset Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalAssetStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>