force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ExpectedTimeToFailureNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedTimeToFailureNumber__c</fullName>
    <label>Expected Time To Failure</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedTimeToFailureNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>