force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__HasLifecycleManagememnt__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasLifecycleManagememnt__c</fullName>
    <label>[DoNotUse]Has Lifecycle Management</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasLifecycleManagememnt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>