force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__HasLifecycleManagement__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasLifecycleManagement__c</fullName>
    <label>Has Lifecycle Management</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasLifecycleManagement</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>