force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__InstallDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstallDateTime__c</fullName>
    <label>Install Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstallDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>