force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__IsIntangible__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsIntangible__c</fullName>
    <label>Is Intangible</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsIntangible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>