force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__isInternal__c.field-meta.xml
<CustomField>
    <fullName>ssot__isInternal__c</fullName>
    <label>Is Internal</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isInternal</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>