force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__isProductArchived__c.field-meta.xml
<CustomField>
    <fullName>ssot__isProductArchived__c</fullName>
    <label>Is Product Archived</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isProductArchived</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>