force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__LifecycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LifecycleStartDate__c</fullName>
    <label>Lifecycle Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LifecycleStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>