force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ManufactureDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManufactureDate__c</fullName>
    <label>Manufacture Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManufactureDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>