force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ManufacturerName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManufacturerName__c</fullName>
    <label>Manufacturer Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManufacturerName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>