force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__PriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriceAmount__c</fullName>
    <label>Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>