force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductDescription__c</fullName>
    <label>Product Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>