force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ProductFamilyName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductFamilyName__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductFamilyName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>