force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchaseAmount__c</fullName>
    <label>Purchase Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchaseAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>