force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__PurchaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchaseCurrency__c</fullName>
    <label>Purchase Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchaseCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>