force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__PurchaseQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__PurchaseQuantity__c</fullName>
    <label>Purchase Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PurchaseQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>