force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__RegisteredDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegisteredDateTime__c</fullName>
    <label>Registered Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegisteredDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>