force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__rel_1697761229516_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761229516_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset_AccountContactId_map_AccountCo_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>Asset_AccountContactId_map_AccountCo_rel</relationshipLabel>
    <relationshipName>rel_1697761229516_end</relationshipName>
    <type>Lookup</type>
</CustomField>