force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__rel_1697761230399_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761230399_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset_SupplierAccountId_map_Account__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Asset_SupplierAccountId_map_Account__rel</relationshipLabel>
    <relationshipName>rel_1697761230399_end</relationshipName>
    <type>Lookup</type>
</CustomField>