force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__RootAssetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RootAssetId__c</fullName>
    <label>Root Asset</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RootAssetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>