force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__ServicerAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicerAccountId__c</fullName>
    <label>Servicer Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicerAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>