force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>ssot__StockKeepingUnit__c</fullName>
    <label>Stock Keeping Unit</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StockKeepingUnit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>