force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__SupplierAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupplierAccountId__c</fullName>
    <label>Supplier Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupplierAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>