force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueIdentifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>