force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__UptimeRecordStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__UptimeRecordStartDateTime__c</fullName>
    <label>Uptime Record Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UptimeRecordStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>