force-app/main/default/objects/ssot__Asset__dlm/fields/ssot__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__VersionNumber__c</fullName>
    <label>Version Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VersionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>